--- a/css/app.css
+++ b/css/app.css
@@ -44,3 +44,25 @@
     flex-direction: column;
     align-items: center;
   }
+
+  hr {
+    border-style:  dotted none none;
+    border-color: grey;
+    border-width: 5px;
+    height: 0 px;
+    max-width: 30%;
+  }
+
+  li {
+    list-style-type: none;
+  }
+
+  .hover-scale:hover {
+    transition-duration: 0.3s;
+    transform: scale(1.2);
+  }
+
+  .hover-scale:active {
+    transition-duration: 0.3s;
+    transform: scale(0.8);
+  }
