--- a/css/contact.css
+++ b/css/contact.css
@@ -27,3 +27,16 @@
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
+.social-link em {
+    font-size: 1.4em;
+}
+
+.social-link{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+    padding: 10px 0;
+    font-size: 1.5em;
+}
