--- a/css/contact.css
+++ b/css/contact.css
@@ -3,40 +3,99 @@
     font-size: 1.2em;
 }
 
-.button-submit{
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 12px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    transition-duration: 0.2s;
-}
-
-.button-submit:hover{
-    background-color: #45a049;
-    transform: scale(1.1);
-}
-
-.button-submit:active{
-    background-color: #45a049;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
-}
-
 .social-link em {
     font-size: 1.4em;
 }
 
 .social-link{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: relative;
-    padding: 10px 0;
-    font-size: 1.5em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 100px;
+    margin: 10px;
+    font-size: 2rem;
+}
+
+.send_email{
+   display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin: 10px;
+    font-size: 2rem;
+    column-gap: 0px;
+    row-gap: 0;
+}
+
+.col1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+}
+
+.col2{
+    grid-column-start: 2;
+    grid-column-end: 4;
+}
+
+.cow-center{
+    grid-column-start: 2;
+    grid-column-end: 3;
+}
+
+.row1{
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.row2{
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+
+.send_email label{
+    font-size: 0.9em;
+}
+
+.send_email input{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #555555;
+    border-radius: 20px;
+    resize: vertical;
+}
+
+.send_email textarea{
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #555555;
+    border-radius: 20px;
+    resize: vertical;
+}
+
+.send_email input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+}
+
+.send_email input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.send_email input[type=submit]:active {
+    background-color: #45a049;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+.form-group-redius{
+    border-radius: 30px;
+    background-color: #cacaca;
+    margin: 10px 4px;
+    padding: 10px;
 }
