--- a/index.css
+++ b/index.css
@@ -28,9 +28,47 @@
   padding-right: 25px;
   padding-left: 25px;
 }
-/* Header-c2 */
+
+#work_experience thead,
+
+#work_experience tfoot {
+  background-color: #333;
+  color: #fff;
+}
 .work{
   widows: 300px;
   font-size: 20px;
   text-align: left;
 }
+
+
+/* Myskill */
+.myskill{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+}
+
+.myskill div table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.myskill div th, td {
+  text-align: left;
+  padding: 8px;
+  /* don't visable line th, td  */
+  
+}
+
+.myskill th {
+  background-color: none;
+  color: rgb(0, 0, 0);
+  font-weight: bolder;
+  font-size: 1.2rem;
+}
+
+.myskill tr:hover {background-color: #ddd;}
